UCF-APR2.4/ftr main/force-app/main/default/objects/Product_Bundles_Base__c/Product_Bundles_Base__c.object-meta.xml
<CustomObject>
    <description>Base object to store DIA + 1 bundle variations.</description>
    <label>Product Bundles Admin</label>
    <nameField>
        <label>Product Bundles Admin Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Bundles Admin</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>