UCF-APR2.4/ftr main/force-app/main/default/objects/Product_Bundles_Base__c/fields/Add_Firewall__c.field-meta.xml
<CustomField>
    <fullName>Add_Firewall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Firewall?</label>
    <type>Checkbox</type>
</CustomField>