UCF-APR2.4/ftr main/force-app/main/default/objects/Product_Bundles_Base__c/fields/Bundle_Admin_Key__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Admin_Key__c</fullName>
    <description>To be used for migrating data. Trigger will populate with Name field value and error thrown if it is not unique.</description>
    <externalId>true</externalId>
    <label>Bundle Admin Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>