UCF-APR2.4/ftr main/force-app/main/default/objects/Product_Bundles_Base__c/fields/Bundle_Description__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Description__c</fullName>
    <label>Bundle Description</label>
    <type>TextArea</type>
</CustomField>