UCF-APR2.4/ftr main/force-app/main/default/objects/Product_Bundles_Base__c/fields/Bundle_Price__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Price__c</fullName>
    <label>Bundle Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>