UCF-APR2.4/ftr main/force-app/main/default/objects/Product_Bundles_Base__c/fields/Bundle_Type__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Type__c</fullName>
    <label>Bundle Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DIA + Managed Firewall</fullName>
            </value>
            <value>
                <fullName>DIA + SIP</fullName>
            </value>
            <value>
                <fullName>DIA + UCF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>