UCF-APR2.4/ftr main/force-app/main/default/objects/Product_Bundles_Base__c/fields/Call_Paths__c.field-meta.xml
<CustomField>
    <fullName>Call_Paths__c</fullName>
    <label>Call Paths</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>16</fullName>
            </value>
            <value>
                <fullName>23</fullName>
            </value>
            <value>
                <fullName>32</fullName>
            </value>
            <value>
                <fullName>46</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>