UCF-APR2.4/ftr main/force-app/main/default/objects/Product_Bundles_Base__c/fields/DIA_Bundle__c.field-meta.xml
<CustomField>
    <fullName>DIA_Bundle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DIA Bundle</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Bundles Admin (DIA Bundle)</relationshipLabel>
    <relationshipName>Product_Bundles_Admin_Bundle</relationshipName>
    <type>Lookup</type>
</CustomField>