UCF-APR2.4/ftr main/force-app/main/default/objects/Product_Bundles_Base__c/fields/DIA_Bundle_PBE__c.field-meta.xml
<CustomField>
    <fullName>DIA_Bundle_PBE__c</fullName>
    <label>DIA Bundle PBE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>