UCF-APR2.4/ftr main/force-app/main/default/objects/Product_Bundles_Base__c/fields/Firewall_Model__c.field-meta.xml
<CustomField>
    <fullName>Firewall_Model__c</fullName>
    <label>Firewall Model</label>
    <length>20</length>
    <type>Text</type>
</CustomField>