UCF-APR2.4/ftr main/force-app/main/default/objects/Product_Bundles_Base__c/fields/ftr_Add_On_Promotion__c.field-meta.xml
<CustomField>
    <fullName>ftr_Add_On_Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Add on Promotion</label>
    <referenceTo>vlocity_cmt__Promotion__c</referenceTo>
    <relationshipLabel>Product Bundles Admin (Add on Promotion)</relationshipLabel>
    <relationshipName>Product_Bundles_Admin_AddOnPromo</relationshipName>
    <type>Lookup</type>
</CustomField>