UCF-APR2.4/ftr main/force-app/main/default/objects/Product_Bundles_Base__c/fields/ftr_IncludedExecutiveSeats__c.field-meta.xml
<CustomField>
    <fullName>ftr_IncludedExecutiveSeats__c</fullName>
    <label>Included Executive Seats</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>