UCF-APR2.4/ftr main/force-app/main/default/objects/Product_Bundles_Base__c/fields/Managed_Firewall_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Managed_Firewall_Bundle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Managed Firewall Bundle</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Bundles Admin (Managed Firewall Bundle)</relationshipLabel>
    <relationshipName>Product_Bundles_Admin_MF</relationshipName>
    <type>Lookup</type>
</CustomField>