UCF-APR2.4/ftr main/force-app/main/default/objects/Product_Bundles_Base__c/fields/Managed_Firewall_PBE__c.field-meta.xml
<CustomField>
    <fullName>Managed_Firewall_PBE__c</fullName>
    <description>Standard Pricebook entry for MFW</description>
    <label>Managed Firewall PBE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>