UCF-APR2.4/ftr main/force-app/main/default/objects/Product_Bundles_Base__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Bundles Admin</relationshipLabel>
    <relationshipName>Product_Bundles_Admin_Product</relationshipName>
    <type>Lookup</type>
</CustomField>