UCF-APR2.4/ftr main/force-app/main/default/objects/Product_Bundles_Base__c/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Promotion</label>
    <referenceTo>vlocity_cmt__Promotion__c</referenceTo>
    <relationshipLabel>Product Bundles Admin</relationshipLabel>
    <relationshipName>Product_Bundles_Base</relationshipName>
    <type>Lookup</type>
</CustomField>