UCF-APR2.4/ftr main/force-app/main/default/objects/Product_Bundles_Base__c/fields/SIP_Bundle_PBE__c.field-meta.xml
<CustomField>
    <fullName>SIP_Bundle_PBE__c</fullName>
    <description>Standard pricebook entry</description>
    <label>SIP Bundle PBE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>