UCF-APR2.4/ftr main/force-app/main/default/objects/Product_Bundles_Base__c/fields/Speed__c.field-meta.xml
<CustomField>
    <fullName>Speed__c</fullName>
    <label>Speed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>50 Mbps</fullName>
            </value>
            <value>
                <fullName>100 Mbps</fullName>
            </value>
            <value>
                <fullName>500 Mbps</fullName>
            </value>
            <value>
                <fullName>1 Gbps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>