UCF-APR2.4/ftr main/force-app/main/default/objects/Product_Bundles_Base__c/fields/Speed_Mbps__c.field-meta.xml
<CustomField>
    <fullName>Speed_Mbps__c</fullName>
    <formula>IF (
	CONTAINS(TEXT(Speed__c), &apos;Mbps&apos;),  
	VALUE(TRIM(LEFT(TEXT(Speed__c), LEN(TEXT(Speed__c)) - 4))),
	IF(
		CONTAINS(TEXT(Speed__c), &apos;Gbps&apos;),  
		VALUE(TRIM(LEFT(TEXT(Speed__c), LEN(TEXT(Speed__c)) - 4))) * 1000,
		0
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Speed(Mbps)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>