UCF-APR2.4/ftr main/force-app/main/default/objects/Product_Bundles_Base__c/fields/UCF_Bundle__c.field-meta.xml
<CustomField>
    <fullName>UCF_Bundle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UCF Bundle</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Bundles Admin (UCF Bundle)</relationshipLabel>
    <relationshipName>Product_Bundles_Admin3</relationshipName>
    <type>Lookup</type>
</CustomField>