UCF-APR2.4/ftr main/force-app/main/default/objects/Product_Bundles_Base__c/fields/UCF_Bundle_PBE__c.field-meta.xml
<CustomField>
    <fullName>UCF_Bundle_PBE__c</fullName>
    <label>UCF Bundle PBE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>