UCF-APR2.4/ftr main/force-app/main/default/objects/Product_Bundles_Base__c/fields/UCF_Phone__c.field-meta.xml
<CustomField>
    <fullName>UCF_Phone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UCF Phone</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Bundles Admin (UCF Phone)</relationshipLabel>
    <relationshipName>Product_Bundles_Admin4</relationshipName>
    <type>Lookup</type>
</CustomField>