UCF-APR2.4/ftr main/force-app/main/default/objects/Product_Bundles_Base__c/fields/UCF_Phone_PBE__c.field-meta.xml
<CustomField>
    <fullName>UCF_Phone_PBE__c</fullName>
    <description>Standard Pricebook Entry record for UCF Yealnk</description>
    <label>UCF Phone PBE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>