UCF-APR2.4/ftr main/force-app/main/default/objects/Product_Bundles_Base__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bundle_Type__c</columns>
    <columns>Promo_Code__c</columns>
    <columns>Term__c</columns>
    <columns>Speed__c</columns>
    <columns>Call_Paths__c</columns>
    <columns>Bundle_Price__c</columns>
    <columns>DIA_Bundle__c</columns>
    <columns>SIP_Bundle__c</columns>
    <columns>Managed_Firewall_Bundle__c</columns>
    <columns>Firewall_Model__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>